Fix due date input styling

--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
             outline: none;
             transition: border-color 0.3s;
             cursor: pointer;
+            background: white;
+            color: #333;
+            min-width: 140px;
         }
 
         #due-date:focus {
