Make due date input narrower

--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
             cursor: pointer;
             background: white;
             color: #333;
-            min-width: 140px;
+            width: 120px;
+            flex-shrink: 0;
         }
 
         #due-date:focus {
