--- a/index.html
+++ b/index.html
@@ -2,9 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/todo-list/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>todo-list-react</title>
+    <title>My Todo List</title>
+    
+    <!-- iOS Home Screen Icons -->
+    <link rel="apple-touch-icon" href="/todo-list/icon-192.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="/todo-list/icon-152.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/todo-list/icon-180.png" />
+    <link rel="apple-touch-icon" sizes="167x167" href="/todo-list/icon-167.png" />
+    
+    <!-- iOS Meta Tags -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="My Todo" />
+    <meta name="theme-color" content="#7c3aed" />
   </head>
   <body>
     <div id="root"></div>
